[project]
name = "gallery-artists-scraper"
version = "0.2.0"
description = "AI-powered scraper for extracting gallery artist relationships"
requires-python = ">=3.12"

dependencies = [
    "crawl4ai>=0.5.0",
    "groq>=0.13.0",
    "supabase>=2.0",
    "thefuzz>=0.22.0",
    "python-levenshtein>=0.25.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
